--- a/public/analytic.html
+++ b/public/analytic.html
@@ -12,7 +12,7 @@
     <script>
         window.onload = async () => {
             try {
-                const response = await fetch('http://localhost:5000/analytics');
+                const response = await fetch('/analytics');
                 if (!response.ok) {
                     throw new Error(`HTTP error! status: ${response.status}`);
                 }
