--- a/public/users.html
+++ b/public/users.html
@@ -51,7 +51,7 @@
     <script>
         window.onload = async () => {
             try {
-                const response = await fetch('http://localhost:5000/totalusers');
+                const response = await fetch('/totalusers');
                 if (!response.ok) {
                     throw new Error(`HTTP error! status: ${response.status}`);
                 }
